[metadata]
name = quarrel
description = Discord API library
author = Village
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    quarrel
install_requires =
    aiohttp==3.7.*
python_requires = >=3.8


[options.package_data]
quarrel = py.typed
